--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,15 +5,15 @@ description: A flexible date parsing and handling library
 environment:
   sdk: '>=2.14.0 <3.0.0'
 dependencies:
-  collection: ^1.15.0
-  dartx: ^0.7.1
-  dartxx: ^0.5.3+2
+  collection: ^1.18.0
+  dartx: ^1.2.0
+  dartxx: ^0.5.5
   equatable: ^2.0.3
   inflection3: ^0.5.3+2
-  intl: ^0.17.0
+  intl: 0.18.1
   logging: ^1.0.2
   timezone: ^0.9.0
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  pedantic: ^1.11.1
+
+dependency_overrides:
+  intl: 0.18.1
+
