--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,13 +6,12 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 dependencies:
   dartx: ^1.2.0
-  dartxx: ^0.5.5
+  dartxx: 
+    git:
+      url: https://github.com/ericmartineau/dartxx.git
+      ref: master
   equatable: ^2.0.3
   inflection3: ^0.5.3+2
   intl: 0.18.1
   logging: ^1.0.2
   timezone: ^0.9.0
-
-dependency_overrides:
-  intl: 0.18.1
-
